add supplement & modify project structure

--- a/code/decision_tree.ipynb
+++ b/code/decision_tree.ipynb
@@ -530,14 +530,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drawtree(tree, jpeg='treeview.jpg')"
+    "drawtree(tree, jpeg='../datasets/treeview.jpg')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "结果如下:<img src='treeview.jpg'>"
+    "结果如下:![treeview.jpg](../datasets/treeview.jpg)"
    ]
   },
   {
@@ -665,8 +665,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prune(tree, 0.7)\n",
-    "drawtree(tree, jpeg='pruned_treeview.jpg')"
+    "prune(tree, 0.9)\n",
+    "drawtree(tree, jpeg='../datasets/pruned_treeview.jpg')"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='pruned_treeview.jpg'>"
+    "![pruned_treeview.jpg](../datasets/pruned_treeview.jpg)"
    ]
   },
   {
@@ -778,6 +778,42 @@
    ],
    "source": [
     "mdclassify(['google', 'France', None, None], tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 什么时候使用决策树"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "或许决策树的最大优势在于它可以轻易地对一个受训模型给予解释。\n",
+    "\n",
+    "此外，与其它几种机器学习算法不同，决策树可以同时接受分类(categorical)数据和数值(numerical)数据作为输入。不仅如此，许多算法在运行之前都要求我们必须对输入数据做预处理，或是归一化处理，而本例中的代码却可以接受包括分类数据和数值数据在内的任何数据列表。\n",
+    "\n",
+    "决策树还允许数据的不确定性分配(mdclassify允许我们使用'None'来表示一个值的缺失)，对数值型数据而言，其结果也许会落在某个已知的范围内。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "不过，决策树算法还是有缺陷的。虽然对于只包含少数几种可能结果的问题而言，算法处理起来非常有效，但当面对大量可能结果的数据集时，算法就变得不那么有效了。\n",
+    "\n",
+    "前述的决策树还有一个较大的缺陷，尽管它可以处理简单的数值类型数据，但是它只能创建满足“>/<”条件的节点。对于某些数据，决定分类的因素往往取决于更多变量的复杂组合，例如，假设结果值是由两个变量的差来决定的，那么这棵树就会变得非常庞大，而且预测的准确性也会迅速下降。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**综上，对于有大量数值型输入和输出的问题，决策树未必是一个好的选择；如果数值型输入之间存在许多错综复杂的关系，决策树也不是一个好的选择。**\n",
+    "\n",
+    "**决策树最适合用来处理的是那些带分界点(breakpoints)的、由大量分类数据和数值数据共同组成的数据集。如果对决策过程的理解至关重要，那么采用决策树就再合适不过了。**"
    ]
   },
   {
