--- a/code/decision_tree.ipynb
+++ b/code/decision_tree.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 决策树建模"
+    "# 决策树建模\n",
+    "对于sklearn中的决策树，参看[DecisionTree](https://github.com/xuhaer/ML/blob/master/Code/Day%2025_Decision_Tree.ipynb)"
    ]
   },
   {
@@ -840,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
