feat: add Loop variables leaking out、Deleting a list item while iterating

--- a/code/wtfpython.ipynb
+++ b/code/wtfpython.ipynb
@@ -587,6 +587,199 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section: Watch out for the landmines!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### > Stubborn del operato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.SomeClass at 0x107c538d0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 24 ~ 26 在ipython kernel下不能实现\n",
+    "class SomeClass:\n",
+    "    def __del__(self):\n",
+    "        print(\"Deleted!\")\n",
+    "\n",
+    "x = SomeClass()\n",
+    "y = x\n",
+    "del x\n",
+    "y # 检查一下y是否存在"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del y # 这里应该会输出 \"Deleted!\"\n",
+    "# 执行 globals 然后会打印 \"Deleted\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💡\n",
+    "* del x 并不会立刻调用 x.__del__().\n",
+    "* 每当遇到 del x, Python 会将 x 的引用数减1, 当 x 的引用数减到0时就会调用 x.__del__().\n",
+    "* 调用 globals 导致引用被销毁, 因此我们可以看到 \"Deleted!\" 终于被输出了."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "idx: 0 list: [1, 2, 3, 4]\n",
+      "idx: 1 list: [2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1, list_2 = [1, 2, 3, 4],  [1, 2, 3, 4]\n",
+    "\n",
+    "for idx, item in enumerate(list_1[:]):\n",
+    "    list_1.remove(item)\n",
+    "\n",
+    "for idx, item in enumerate(list_2):\n",
+    "    print('idx:', idx, 'list:', list_2)\n",
+    "    list_2.pop(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💡\n",
+    "* 在迭代时修改对象是一个很愚蠢的主意. 正确的做法是迭代对象的副本, list_1[:] 就是这么做的."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### > Loop variables leaking out!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 : for x inside loop\n",
+      "6 : x in global\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -1\n",
+    "for x in range(7):\n",
+    "    if x == 6:\n",
+    "        print(x, ': for x inside loop')\n",
+    "print(x, ': x in global')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "-1 : x in global\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -1\n",
+    "print([x for x in range(5)])\n",
+    "print(x, ': x in global')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💡\n",
+    "* 在 Python 中, for 循环使用所在作用域并在结束后保留定义的循环变量. 如果我们曾在全局命名空间中定义过循环变量. 在这种情况下, 它会重新绑定现有变量.\n",
+    "* 另外, 注意列表推导具有不同的语义: 它们更接近于 list() 构造函数中生成器表达式的语法躺."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
