feat: filish it.

--- a/code/wtfpython.ipynb
+++ b/code/wtfpython.ipynb
@@ -1045,6 +1045,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section: The Hidden treasures!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### > Yes, it exists!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def does_exists_num(l, to_find):\n",
+    "    for num in l:\n",
+    "        if num == to_find:\n",
+    "            print(\"Exists!\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"Does not exist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exists!\n"
+     ]
+    }
+   ],
+   "source": [
+    "does_exists_num([1, 2], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "does_exists_num([1, 2], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try block executed successfully...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    pass\n",
+    "except:\n",
+    "    print(\"Exception occurred!!!\")\n",
+    "else:\n",
+    "    print(\"Try block executed successfully...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💡\n",
+    "* 循环后的 else 子句只会在循环没有触发 break 语句, 正常结束的情况下才会执行.\n",
+    "* try 之后的 else 子句也被称为 \"完成子句\", 因为在 try 语句中到达 else 子句意味着try块实际上已成功完成."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
