--- a/code/decision_tree.ipynb
+++ b/code/decision_tree.ipynb
@@ -827,9 +827,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_analysis",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_analysis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -841,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
